CRUD logic and mapper